--- a/src/pages/cards-page/components/card-grid/card-grid.styles.scss
+++ b/src/pages/cards-page/components/card-grid/card-grid.styles.scss
@@ -4,17 +4,17 @@ $layout-breakpoint-md: 900px;
 .card-grid {
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 1.25rem;
 
     margin-bottom: 1.25rem;
 
     @media screen and (max-width: $layout-breakpoint-md) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
     @media screen and (max-width: $layout-breakpoint-sm) {
-      grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
 
